--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: http://yjy123123.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -109,3 +109,9 @@ deploy:
   type: git
   repository: git@github.com:yjy123123/yjy123123.github.io.git
   branch: main 
+
+# 自动生成sitemap
+sitemap: 
+  path: sitemap.xml
+baidusitemap: 
+  path: baidusitemap.xml
